update mision html

--- a/mision.html
+++ b/mision.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-<h1>Misión, Visión y Valores</h1>
+<div><h1>Misión, Visión y Valores</h1>
 <h2>Misión</h2>
 <p> Comiendo sano es la mejor opción para toda persona que requiere alimentos saludables, platos exquisitos sin dejar de comer bien. Rebasamos las  expectativas de nuestros clientes sirviéndoles platillos con higiene y esmero, mejorando  constantemente sus procesos en la busqueda de la satifación total de sus clientes a través de un personal altamente capacitado y con la colaboración de nuestros proveedores.</p>
 <p>Somo el restaurante con mayor variedad de comida saludable estamos comprometidos con nuestros:</p>
@@ -37,5 +37,6 @@
   <li> Nuestro  compromiso principal es crear experiencias agradables al paladar de nuestros  clientes.</li>
 </ol>
 <p>&nbsp;</p>
+</div>
 </body>
 </html>
