Paginas Html mejoradas
cambios en el diseño los .html al 3 de agosto
index, login, servicio, menu, my orders y recuperar clave completamente
terminadas...

--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html>
-<head>
-  
+<head>  
   <meta http-equiv='Content-Type' content='text/html; charset=iso-8859-1' />
   <meta name="description" content=" ">
   <meta name="author" content=" ">
@@ -13,17 +12,13 @@
 
   <link rel="stylesheet" type="text/css" href="css/flexslider.css">
   <link rel="stylesheet" type="text/css" href="css/font-awesome.css">
-
   <link rel="stylesheet" type="text/css" href="css/bootstrap.css">
   <link rel="stylesheet" type="text/css" href="css/style.css">
   <link rel="stylesheet" type="text/css" href="css/arma_bici.css">
  
 	<link rel="stylesheet" href="_css/style.css">
    	<link rel="stylesheet" href="_css/responsive.css">
-
-
-	
-    
+  
   <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
   <!--[if lt IE 9]>
   <script src="bootstrap/js/html5shiv.js"></script>
@@ -32,17 +27,12 @@
 
 </head>
 <body>
-
-
 <div class="wrapper">
-
 <header id="MainNav">
   <div class="container">
     <div class="row">
       <section class="col-md-12" id="TopBar">
-        <a href="login.html" class="btn btn-link pull-left btn-login">
-          Iniciar Sesion
-        </a>
+      		<div id="usuario"></div>
 
         <!-- SHOPPING CART -->
         <div class="shopping-cart-widget pull-right">
@@ -362,6 +352,7 @@
 <!-- !plugins -->
 
 <script src="js/main.js"></script>
+<script language="JavaScript" type="text/javascript" src="ajax.js"></script>
 
 </body>
 </html>
