--- a/menu.html
+++ b/menu.html
@@ -36,11 +36,9 @@
       <div class="container">
         <div class="row">
           <section class="col-md-12" id="TopBar">
-             <a href="login.html" class="btn btn-link pull-left btn-login">
-          Iniciar Sesion
-        </a>
+			  <div id="usuario"></div>
 
-            <!-- SHOPPING CART -->
+			  <!-- SHOPPING CART -->
             <div class="shopping-cart-widget pull-right">
               <button type="button" class="btn btn-link pull-right">
                 <span aria-hidden="true" data-icon="&#xe006;"></span> 2 items: $89.00 <b class="caret"></b>
@@ -358,6 +356,7 @@
 <!-- !plugins -->
 
 <script src="js/main.js"></script>
+<script language="JavaScript" type="text/javascript" src="ajax.js"></script>
 
 </body>
 </html>
