--- a/cuenta-perfil.html
+++ b/cuenta-perfil.html
@@ -107,7 +107,9 @@
               <div class="col-sm-3">
                   <nav class="shop-section-navigation element-emphasis-weak">
                       <ul class="list-unstyled">
-						<li class="active"><span>INFORMACIÓN DE LA CUENTA</span></li>          
+						<li><a href="cuenta-dieta.html">Seleccion de Dieta</a></li>
+						<li class="active"><span>INFORMACIÓN DE LA CUENTA</span></li> 
+						<li><a href="cuenta-detalle.html">Informacion de contacto</a></li>     
 						<li><a href="byb_account-my-orders.html">MIS PEDIDOS</a></li>     
 						<li><a href="javascript:logout();">LOGOUT</a></li>       
                       </ul>
@@ -159,7 +161,7 @@
 
 <script src="js/main.js"></script>
 <script language="JavaScript" type="text/javascript" src="ajax.js"></script>
-<script src="js/perfil.js"></script>
+<script src="js/cuenta_perfil.js"></script>
 
 </body>
 </html>
